[package]
name = "greeting"
version = "0.1.0"
authors = ["shizi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = "1.0.130"
serde_json = "1.0.68"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.130"

# #日期支持(必须)
# chrono = { version = "0.4", features = ["serde"] }

# #log日志支持(必须)
# log = "0.4"
# fast_log="1.3"

# #rbatis支持
# rbatis = "2.1.3"
# zeroize_derive = "1.2.0"
tokio = { version = "1.12.0", features = ["full"] }
# diesel = {version="1.4.8", features="mysql"}
# dotenv = "0.15.0"

# sqlx = { version = "0.5.9", features = [ "mysql" ] }
# async-std = { version = "1.6", features = [ "attributes" ] }

# tokio = {version = "0.2.15", features = ["full"] }
# sqlx = {version = "0.5.9", features = ["runtime-tokio", "mysql", "chrono", "runtime-async-std-native-tls", "runtime-actix-native-tls", "runtime-tokio-native-tls", "runtime-actix-rustls", "runtime-tokio-rustls"]}

sqlx = { version = "0.5.9", features = ["mysql", "chrono", "runtime-tokio-rustls"] }

# sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
# async-std + native-tls
# sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls" ] }

# concurrent hashmap
dashmap = { version = "4.0.2", features = [ "serde" ] }

flurry = "0.3.1"

chashmap = "2.2.2"
