[package]
name = "web"
version = "0.1.0"
authors = ["shizi <lan.zhu.123@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.0"
serde = "1.0.130"
serde_json = "1.0.68"

tokio = { version = "0.3", features = ["full"] }

#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"

#日期支持(必须)
chrono = { version = "0.4", features = ["serde"] }

#log日志支持(必须)
log = "0.4"
fast_log="1.3"

#BigDecimal支持(可选)
# bigdecimal = "0.2"

#rbatis支持
rbatis =  { version = "2.0" }
